--- a/client/src/components/ImageLoader.css
+++ b/client/src/components/ImageLoader.css
@@ -11,7 +11,7 @@
     color: #ff69b4; /* Pink text */
     text-align: center;
     padding: 20px;
-    /* border-radius: 10px; */
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(255, 255, 0, 0.2); /* Yellow shadow */
 }
 
